--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -306,3 +306,21 @@ input[type="button"] {
     text-decoration: none;
     cursor: pointer;
 }
+
+
+#cpnotif {
+    color: white;
+    font-size: 1rem;
+    background-color: black;
+    padding: 20px;
+    border-radius: 30px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    margin-top: -30px;
+    margin-left: -85px;
+    display: block;
+    text-align:center;
+    transition: opacity 1200ms;
+}
