fix size to 11px for date

--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -197,7 +197,7 @@ footer {
     height: 1.25rem;
     line-height: 1rem;
     font-family: monospace;
-    font-size: 0.95rem;
+    font-size: 11px;
 }
 
 .name {
