--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -89,37 +89,41 @@ footer {
     width: 90%;
 }
 
+#sidebar {
+    width: 320px;
+    display: inline-block;
+}
+
 #action_picker {
     background-color: #F7F7F7;
     display: block;
-    width: 360px;
     border-radius: 6px;
-    margin: 0 auto;
+    margin: 4px;
     text-indent: 0px;
     text-align: center;
-    padding-top: 6px;
+    padding-top: 0px;
 }
 
 #action_picker ul {
     list-style: none;
-    margin: 10px auto;
-    padding: 0;
+    margin: 0px auto;
+    padding: 0px;
     display: inline-block;
-    width: calc(100% - 60px);
+    width: 100%;
 }
 
 #action_picker li {
     background-color: #afc6d0;
     color: white;
     border-radius: 5px;
-    margin: 6px;
+    margin: 8px;
     padding: 4px;
-    calc(100% - 32px);
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     font-weight: bold;
     box-shadow: 0px 4px #7c8f96;
-    margin-top: 10px;
     text-decoration: none;
+    display: inline-block;
+    width: calc(100% - 40px);
 }
 
 #action_picker a {
@@ -150,7 +154,7 @@ footer {
 }
 
 #header img {
-    width: 400px;
+    width: 320px;
 }
 
 #tos {
@@ -169,7 +173,7 @@ footer {
     background: white;
     border-radius: 4px;
     border: 1.5px solid #333;
-    margin: 30px auto;
+    margin: 6px auto;
     overflow-y: scroll;
     padding: 4px;
     display: inline-block;
@@ -223,13 +227,13 @@ footer {
 #userlist_wrapper {
     display: inline-block;
     background-color: aliceblue;
-    width: 200px;
-    max-height: 500px;
-    min-height: 500px;
+    width: calc(100% - 20px);
+    border-radius: 6px;
+    height: 400px;
     padding: 4px;
     vertical-align: top;
     position: relative;
-    margin-top: 30px;
+    margin: 4px;
     overflow-y: scroll;
 }
 
@@ -345,4 +349,54 @@ input[type="button"] {
 li > span:empty {
     border: none;
     background-color: #0000;
+}
+
+
+/* Shrink UI on mobile */
+@media screen and (max-width: 1200px) {
+    #userlist_wrapper {
+        max-width: 280px !important;
+    }
+    #userlist a {
+        display: none;
+    }
+    #userlist {
+        font-size: 0.825rem;
+    }
+    #sidebar {
+        font-size: 0.9rem !important;
+        height: 20px;
+        margin-top: 0px !important;
+        padding: 2px;
+        display: inline-block;
+        max-width: 240px;
+    }
+
+    #action_picker li {
+        font-size: 0.8rem;
+    }
+
+    .label {
+        font-size: 10px;
+        height: 12px;
+        min-width: 12px;
+
+    }
+    .message {
+        font-size: 0.8rem;
+    }
+
+    .name {
+        font-size: 0.75rem;
+        width: 200px;
+    }
+
+    .timestamp {
+        width: 140px;
+    }
+
+
+    #header > img {
+        width: 200px;
+    }
 }
