--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -179,18 +179,23 @@ footer {
 }
 
 
-.channel {
+#channels {
     width: calc(100% - 310px);
     height: 500px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.channel {
+    overflow-y: scroll;
+    height: 480px;
+    width: 100%;
     background: white;
     border-radius: 4px;
     border: 1.5px solid #333;
     margin: 6px auto;
-    overflow-y: scroll;
     padding: 4px;
     display: inline-block;
-    vertical-align: top;
-    position: relative;
 }
 
 .line {
@@ -209,6 +214,20 @@ footer {
 
 .line:nth-child(odd) {
     background-color: rgba(236, 243, 250, 0.61);
+}
+
+.topic {
+    position: relative;
+    width: 100%;
+    height: 20px;
+    background-color: #fffdef;
+    z-index: 5;
+    margin-top: -28px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    border-radius: 4px;
+    padding: 2px;
+    border: 1px solid #333;
 }
 
 .timestamp {
@@ -291,7 +310,6 @@ footer {
     max-width: 95%;
     margin: 0 auto;
     min-height: 400px;
-    position: relative;
 }
 
 
