--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -194,7 +194,7 @@ footer {
     background: white;
     border-radius: 4px;
     border: 1.5px solid #333;
-    margin: 6px auto;
+    margin: 3px auto;
     padding: 4px;
     display: inline-block;
 }
@@ -223,12 +223,14 @@ footer {
     height: 20px;
     background-color: #fffdef;
     z-index: 5;
-    margin-top: -28px;
     font-size: 0.9rem;
     font-weight: bold;
     border-radius: 4px;
     padding: 2px;
     border: 1px solid #333;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .timestamp {
