--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -160,24 +160,23 @@ footer {
     margin: 40px auto;
 }
 
-
-#channels {
+#channels > .channel {
     display: inline-block;
     vertical-align: top;
-    margin-bottom: 25px;
     width: 100%;
     height: calc(100vh - 450px);
+    border: 1px solid #0003;
+    border-top: none;
+    margin: 0 auto;
+    padding: 4px;
+    padding-bottom: 20px;
 }
 
 .channel {
     overflow-y: scroll;
-    max-height: 100%;
+    max-height: calc(100% - 16px);
     width: 100%;
     background: white;
-    border-radius: 4px;
-    border: 1.5px solid #333;
-    margin: 3px auto;
-    padding: 4px;
     display: inline-block;
 }
 
@@ -201,17 +200,17 @@ footer {
 .topic {
     position: relative;
     width: 100%;
-    height: 20px;
-    background-color: #fffdef;
+    height: 32px;
+    background-color: #0001;
     z-index: 5;
     font-size: 0.9rem;
     font-weight: bold;
-    border-radius: 4px;
-    padding: 2px;
-    border: 1px solid #333;
+    padding: 6px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    border: 1px solid #0003;
+    margin-bottom: -8px;
 }
 
 .timestamp {
