minor color tweak to user list

--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -85,7 +85,7 @@ footer {
 
 #sidebar {
     display: inline-block;
-    background-color: #353961;
+    background-color: #353a70;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     height: calc(100% + 1px);
