--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -6,9 +6,13 @@ html {
 }
 
 body {
-    background-color: #8d9bac;
+    background-color: #1f70a6;
     max-width: 2200px;
     margin: 0 auto;
+}
+
+h3 {
+    color: #FFF;
 }
 
 #login {
@@ -85,7 +89,7 @@ footer {
 
 #sidebar {
     display: inline-block;
-    background-color: #353a70;
+    background-color: #262f3b;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     height: calc(100% + 1px);
@@ -136,12 +140,12 @@ footer {
 }
 
 #action_picker li[type="active"] {
-    background-color: #05c971;
+    background-color: #0e90ec;
     box-shadow: 0 2px #FFF1;
 }
 
 #action_picker li[type="active"]:hover {
-    background-color: #08dc7d;
+    background-color: #109cff;
     cursor: pointer;
 }
 
@@ -210,13 +214,13 @@ footer {
 .topic {
     position: relative;
     width: 100%;
-    height: 32px;
-    background-color: #000B;
-    color: #FFF;
+    height: 38px;
+    background-color: #e1e7ed;
+    color: #000;
     z-index: 5;
     font-size: 0.9rem;
     font-weight: bolder;
-    padding: 6px;
+    padding: 8px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
