--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -120,6 +120,7 @@ footer {
 
 .infobox .btn {
     border-radius: 4px;
+    color: white;
 }
 
 #action_picker ul {
@@ -142,6 +143,7 @@ footer {
     text-decoration: none;
     display: inline-block;
     width: calc(100% - 20px);
+    color: white;
 }
 
 #action_picker a {
