--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -473,20 +473,22 @@ li > span:empty {
     overflow: auto;
     display: block;
     z-index: 999999;
+    background: #2a2e40;
+    border-radius: 5px;
+    border: 1px solid #fff;
+    color: white;
 }
 .tribute-container ul {
     margin: 0;
     margin-top: 2px;
     padding: 0;
     list-style: none;
-    background: #efefef;
 }
 .tribute-container li {
     padding: 5px 5px;
     cursor: pointer;
 }
 .tribute-container li.highlight {
-    background: #ddd;
 }
 .tribute-container li span {
     font-weight: bold;
