--- a/htdocs/css/mm.css
+++ b/htdocs/css/mm.css
@@ -347,13 +347,9 @@ h6 {
 
 
 input[type="button"],#navbarToggleExternalContent>a {
-    margin: 6px;
-    padding: 2px;
+    margin: 3px;
+    padding: 2px 5px 2px 5px;
     font-size: 0.8rem;
-    font-weight: bold;
-    vertical-align: top;
-    text-decoration: none;
-    cursor: pointer;
     display: inline-block !important;
 }
 
